# gisappv1

./: README.md  pyproject.toml
.github/workflows/: ci.yml
gisappv1/: hooks.py  modules.txt
gisappv1/api/: survery_report_pdf_api.py
gisappv1/gisappv1/dashboard_chart/sample/: sample.json
gisappv1/gisappv1/doctype/data_entry_table/: data_entry_table.json  data_entry_table.py
gisappv1/gisappv1/doctype/dimensions/: dimensions.json  dimensions.py
gisappv1/gisappv1/doctype/gis/: gis.js  gis.json  gis.py  test_gis.py
gisappv1/gisappv1/doctype/ground_water_research/: ground_water_research.js  ground_water_research.json  ground_water_research.py  test_ground_water_research.py
gisappv1/gisappv1/doctype/groups/: groups.js  groups.json  groups.py  test_groups.py
gisappv1/gisappv1/doctype/indicators/: indicators.json  indicators.py
gisappv1/gisappv1/doctype/item/: item.js  item.json  item.py  test_item.py
gisappv1/gisappv1/doctype/research_survey/: research_survey.js  research_survey.json  research_survey.py  test_research_survey.py
gisappv1/gisappv1/doctype/research_template/: research_template copy.js  research_template.js  research_template.json  research_template.py  test_research_template.py
gisappv1/gisappv1/gisappv1_dashboard/demoresearch/: demoresearch.json
gisappv1/gisappv1/number_card/point/: point.json
gisappv1/gisappv1/report/ground_water_report/: ground_water_report.js  ground_water_report.json  ground_water_report.py
gisappv1/gisappv1/report/survey_report/: __init__.py  hero.js  survey_report copy.js  survey_report copy.py  (+8 more)
